Commit de cambios locales recuperados tras reparación del repositorio